[package]
name = "hosts"
version = "0.1.0"
edition = "2021"
authors = ["Dusan Malusev <dusan@dusanmalusev.dev>"]
categories = ["library", "hosts-parser", "/etc/hosts"]
description = "Small parser and lexer library for Hosts file format"
keywords = [
    "cli",
    "app",
    "library",
    "hosts",
    "parser",
    "lexer",
    "hosts-parser",
    "hosts-lexer",
    "linux-hosts",
    "windows-hosts",
    "macos-hosts",
]
license-file = "../LICENCE"
readme = "../README.md"


[dependencies]
clap = { version = "3.2.18", features = ["once_cell", "derive"] }
smallvec = { version = "1.9.0", features = ["const_generics", "const_new", "union"] }

hosts-parser = { path = "../hosts-parser" }

